--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,5 +1,18 @@
 <div class="grid justify-content-center flex-column align-items-center">
-  <h3>Surf the highs of revealed yields</h3>
+  <h3>Surf the highs of revealed yields
+    <div  style="margin:unset" class="col-12 call-out">
+      <div class="flex align-items-center justify-content-center">
+      
+        <div class="flex justify-content-between align-items-center text-center">
+          <i class="pi pi-lock"></i>
+          <span style="margin-left:15px;font-size:30px;text-align: left;color:var(--primary-color);"> TVL</span>
+          <span style="margin-left:15px;font-size: 15px;text-align: left;" class="text-pink-400">
+            <span style="font-size: 30px"> {{ totalTvl }}</span>{{ '0000' }}
+          </span>
+        </div>
+      </div>
+    </div>
+  </h3>
 
   <div class="col-12">
     <div class="grid justify-content-center">
@@ -7,20 +20,7 @@
         <div style="border:unset;height:330px" class="card mb-0">
           <div style="" class="grid justify-content-center">
 
-            <div class="col-4 call-out">
-              <div class="flex align-items-center justify-content-center">
-                <i class="pi pi-lock"></i>
-                <div class="flex justify-content-between flex-column text-center">
-                  <span style="font-size:20px;text-align: left;color:var(--primary-color);"> TVL</span>
-                  <div class="text-900 font-medium">
-                    <span style="font-size: 15px;text-align: left;" class="text-pink-400">
-                      <span style="font-size: 30px"> {{ totalTvl }}</span>{{ '0000' }}
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-4 call-out justify-content-center">
+            <div class="col-6 call-out justify-content-center">
               <div class="flex align-items-center justify-content-center">
                 <i class="pi pi-chart-line"></i>
                 <div class="flex justify-content-between flex-column text-center">
@@ -35,7 +35,7 @@
               </div>
             </div>
 
-            <div class="col-4 call-out justify-content-center">
+            <div class="col-6 call-out justify-content-center">
               <div class="flex align-items-center justify-content-center">
                 <i class="pi pi-percentage"></i>
                 <div class="flex justify-content-between flex-column text-center">
