--- a/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.scss
+++ b/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.scss
@@ -1,13 +1,22 @@
-.credit_details {
+.credit-details {
+    text-align: center;
+
+    h5 {
+        text-align: center;
+    }
+
+    p {
     width: fit-content;
+    text-align: center;
+    min-width:150px;
     border-color: green;
-    background: grey;
+    background: var(--surface-ground);
     padding: 12px;
     border-radius: 5px;
-    /* margin-top: 52px; */
     position: relative;
     top: 10px;
     margin: 20px 10px;
     line-height: 26px;
-    min-width:50px;
+ 
+    }
 }
