--- a/src/app/shared/components/credit-table/credit-table/credit-table.component.html
+++ b/src/app/shared/components/credit-table/credit-table/credit-table.component.html
@@ -49,19 +49,14 @@
                             {{credit.id}}
                         </td>
                         <td style="width: 15%; ">{{displayAddress(credit.requester.member)}}</td>
-                        <td style="width: 10%; ">{{credit.amount}}$</td>
+                        <td style="width: 10%; ">{{formatSmallEther(credit.amount)}}$</td>
                         <td style="width: 5%;">{{credit.rate}}%</td>
-                        <td style="width: 10%;">{{credit.delegatorsAmount}}$</td>
+                        <td style="width: 10%;">{{formatSmallEther(credit.delegatorsAmount)}}$</td>
                         <td style="width: 25%;">{{blockTimeToTime(credit.finishPhaseTimestamp)}}</td>
 
                         <td style="width: 10%; min-width: 2rem;text-align:center">{{credit.delegatorsNr}} of ({{credit.delegatorsRequired}})</td>
 
 
-
-
-                        <!-- <td  style="width: 10%;">
-                            <button pButton pRipple type="button" (click)="goToCredit(credit.id)" icon="pi pi-search" class="p-button p-component p-button-text p-button-icon-only"></button>
-                        </td> -->
                         <td style="width: 15%;text-align:center">
                             <button pButton pRipple type="button" icon="pi pi-search"
                                 (click)="goToCredit(credit.id)" label="Stop"
@@ -81,9 +76,9 @@
                             {{credit.id}}
                         </td>
                         <td style="width: 15%; ">{{displayAddress(credit.requester.member)}}</td>
-                        <td style="width: 10%; ">{{credit.amount}}$</td>
+                        <td style="width: 10%; ">{{formatSmallEther(credit.amount)}}$</td>
                         <td style="width: 5%;">{{credit.rate}}%</td>
-                        <td style="width: 10%;">{{credit.delegatorsAmount}}$</td>
+                        <td style="width: 10%;">{{formatSmallEther(credit.delegatorsAmount)}}$</td>
                         <td style="width: 25%;">{{blockTimeToTime(credit.finishPhaseTimestamp)}}</td>
 
                         <td style="width: 10%; min-width: 2rem;text-align:center">{{credit.delegatorsNr}} of (5)</td>
@@ -115,7 +110,7 @@
                         <td style="width: 5%; min-width: 5rem;">
                             {{credit.id}}
                         </td>
-                        <td style="width: 15%; min-width: 4rem;">{{credit.amount}}$</td>
+                        <td style="width: 15%; min-width: 4rem;">{{formatSmallEther(credit.amount)}}$</td>
                         <td style="width: 10%; min-width: 4rem;">{{credit.rate}}%</td>
                         <td style="width: 30%; min-width: 4rem;">{{blockTimeToTime(credit.finishPhaseTimestamp)}}</td>
                         <td style="width: 5%; min-width: 2rem;text-align:center">{{credit.delegatorsNr}} of (5)</td>
