--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,12 +1,9 @@
-<div class="grid">
+<div class="grid justify-content-center flex-column align-items-center">
+  <h3 style="color:grey;text-align: center;">
+    Dashboard
+  </h3> 
   <div class="col-12">
     <div style="position: relative; border-color: transparent" class="card">
-      <!-- <h5>
-
-        Dashboard
-      </h5> -->
-
-      <div style="margin-top: 20px" class="grid p-fluid"></div>
 
       <div class="col-12">
 
