--- a/src/app/pages/request-credit/request-credit.component.html
+++ b/src/app/pages/request-credit/request-credit.component.html
@@ -1,25 +1,14 @@
 <div class="grid justify-content-center">
+  <h3>Credit Request</h3>
   <div class="col-12">
     <div
       style="position: relative; border-color: transparent"
       class="text-center"
     >
-      <div class="card">
-        <div class="flex align-items-center justify-content-between mb-0">
-          <h6>Let's build together the Trust</h6>
-        </div>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </div>
 
-      <div style="margin-top: 20px" class="card">
+
+      <div style="margin-top: 20px;border:unset" class="card">
+        <h6>Let's build together the Trust</h6>
         <div class="grid">
           <div  style="align-items: center;
           align-content: center;
@@ -32,7 +21,11 @@
 
             <div *ngIf="lensLoading == false && lensProfile == false">
               <h6 style="color:var(--pink-400);font-weight:bold;">OOPS Profile not found</h6>
-              <span>You can </span>
+          
+              <div   style="">
+                <h6>Query Mock Profile?</h6>
+                <p-inputSwitch (onChange)="mockProfile()" [(ngModel)]="mockProfileActive"> </p-inputSwitch>
+              </div>
             </div>
 
             <div *ngIf="lensLoading == false && lensProfile == true">
