--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -10,6 +10,146 @@
         <div style="margin-top: 20px" class="grid">
           <!-- //// Wrap-Unwrap -->
           <div class="col-12 lg:col-4 xl:col-4">
+            <div
+              style="background-color: var(--surface-ground)"
+              class="card mb-0">
+              <div class="grid p-fluid justify-content-center">
+                <div class="col-12 flex align-items-center">
+                  <span class="block text-500 font-medium ml-2">
+                    Your stream</span
+                  >
+                  <!-- #region REALTIME  ////  -->
+                </div>
+                <div class="col-12 text-center">
+                  <div class="flex justify-content-between flex-column mb-3">
+                    <div class="text-900 font-medium text-lg">
+                      <span class="text-green-500">
+                        <span style="font-size: 40px"> {{ twoDec }}</span
+                        >{{ fourDec }}
+                      </span>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- #endregion REALTIME ////  -->
+
+                <div class="col-12 flex justify-content-around">
+                  <button *ngIf="isFlowAvailable == false"
+                    pButton
+                    pRipple
+                    style="position: relative; width: fit-content"
+                    (click)="showStartFlow()"
+                    type="button"
+                    label="Stream-->"
+                    class="p-button-rounded mr-2 mb-2"
+                  ></button>
+                  <button *ngIf="isFlowAvailable == true"
+                  pButton
+                  pRipple
+                  style="position: relative; width: fit-content"
+                  (click)="stopFlow()"
+                  type="button"
+                  label="Stop Stream"
+                  class="p-button-rounded mr-2 mb-2"
+                ></button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 lg:col-4 xl:col-4">
+            <div
+              style="background-color: var(--surface-ground)"
+              class="card mb-0"
+            >
+              <div class="grid p-fluid justify-content-center">
+                <div class="col-12 flex align-items-center">
+                  <span class="block text-500 font-medium ml-2">
+                    Your stream</span
+                  >
+                  <!-- #region REALTIME  ////  -->
+                </div>
+                <div class="col-12 text-center">
+                  <div class="flex justify-content-between flex-column mb-3">
+                    <div class="text-900 font-medium text-lg">
+                      <span class="text-green-500">
+                        <span style="font-size: 40px"> {{ twoDec }}</span
+                        >{{ fourDec }}
+                      </span>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- #endregion REALTIME ////  -->
+
+                <div class="col-12 flex justify-content-around">
+                  <button *ngIf="isFlowAvailable == false"
+                    pButton
+                    pRipple
+                    style="position: relative; width: fit-content"
+                    (click)="showStartFlow()"
+                    type="button"
+                    label="Stream-->"
+                    class="p-button-rounded mr-2 mb-2"
+                  ></button>
+                  <button *ngIf="isFlowAvailable == true"
+                  pButton
+                  pRipple
+                  style="position: relative; width: fit-content"
+                  (click)="stopFlow()"
+                  type="button"
+                  label="Stop Stream"
+                  class="p-button-rounded mr-2 mb-2"
+                ></button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- //// Mint area -->
+          <div class="col-12 lg:col-4 xl:col-4">
+            <div
+              style="background-color: var(--surface-ground)"
+              class="card mb-0"
+            >
+              <div class="grid p-fluid justify-content-center">
+                <div class="col-12 flex align-items-center">
+                  <span class="block text-500 font-medium ml-2"> Deposit</span>
+                  <!-- #region REALTIME  ////  -->
+                </div>
+                <div class="col-12 text-center">
+                  <div class="flex justify-content-between flex-column mb-2">
+                    <div class="text-900 font-medium text-lg">
+                      <p-inputNumber
+                        [formControl]="depositAmountCtrl"
+                        placeholder="Amount"
+                        mode="decimal"
+                        [showButtons]="true"
+                        [min]="0"
+                      >
+                      </p-inputNumber>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- #endregion REALTIME ////  -->
+
+                <div class="col-12 flex justify-content-around">
+                  <button
+                    pButton
+                    pRipple
+                    style="width: fit-content"
+                    (click)="deposit()"
+                    type="button"
+                    label="Deposit"
+                    class="p-button-rounded mr-2 mb-2"
+                  ></button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 lg:col-4 xl:col-4">
             <user-balance
               (refreshEvent)="refreshBalance()"
               (mintEvent)="mint()"
