--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -15,9 +15,8 @@
               class="card mb-0">
               <div class="grid p-fluid justify-content-center">
                 <div class="col-12 flex align-items-center">
-                  <span class="block text-500 font-medium ml-2">
-                    Your stream</span
-                  >
+                 
+                  <h5 style="color:grey">Total Balance</h5>
                   <!-- #region REALTIME  ////  -->
                 </div>
                 <div class="col-12 text-center">
@@ -33,26 +32,7 @@
 
                 <!-- #endregion REALTIME ////  -->
 
-                <div class="col-12 flex justify-content-around">
-                  <button *ngIf="isFlowAvailable == false"
-                    pButton
-                    pRipple
-                    style="position: relative; width: fit-content"
-                    (click)="showStartFlow()"
-                    type="button"
-                    label="Stream-->"
-                    class="p-button-rounded mr-2 mb-2"
-                  ></button>
-                  <button *ngIf="isFlowAvailable == true"
-                  pButton
-                  pRipple
-                  style="position: relative; width: fit-content"
-                  (click)="stopFlow()"
-                  type="button"
-                  label="Stop Stream"
-                  class="p-button-rounded mr-2 mb-2"
-                ></button>
-                </div>
+        
               </div>
             </div>
           </div>
@@ -64,9 +44,7 @@
             >
               <div class="grid p-fluid justify-content-center">
                 <div class="col-12 flex align-items-center">
-                  <span class="block text-500 font-medium ml-2">
-                    Your stream</span
-                  >
+                  <h5 style="color:grey">Available Balance</h5>
                   <!-- #region REALTIME  ////  -->
                 </div>
                 <div class="col-12 text-center">
@@ -80,28 +58,7 @@
                   </div>
                 </div>
 
-                <!-- #endregion REALTIME ////  -->
-
-                <div class="col-12 flex justify-content-around">
-                  <button *ngIf="isFlowAvailable == false"
-                    pButton
-                    pRipple
-                    style="position: relative; width: fit-content"
-                    (click)="showStartFlow()"
-                    type="button"
-                    label="Stream-->"
-                    class="p-button-rounded mr-2 mb-2"
-                  ></button>
-                  <button *ngIf="isFlowAvailable == true"
-                  pButton
-                  pRipple
-                  style="position: relative; width: fit-content"
-                  (click)="stopFlow()"
-                  type="button"
-                  label="Stop Stream"
-                  class="p-button-rounded mr-2 mb-2"
-                ></button>
-                </div>
+  
               </div>
             </div>
           </div>
@@ -112,40 +69,50 @@
               style="background-color: var(--surface-ground)"
               class="card mb-0"
             >
-              <div class="grid p-fluid justify-content-center">
-                <div class="col-12 flex align-items-center">
-                  <span class="block text-500 font-medium ml-2"> Deposit</span>
-                  <!-- #region REALTIME  ////  -->
-                </div>
-                <div class="col-12 text-center">
-                  <div class="flex justify-content-between flex-column mb-2">
-                    <div class="text-900 font-medium text-lg">
-                      <p-inputNumber
-                        [formControl]="depositAmountCtrl"
-                        placeholder="Amount"
-                        mode="decimal"
-                        [showButtons]="true"
-                        [min]="0"
-                      >
-                      </p-inputNumber>
-                    </div>
+            <div class="grid justify-content-center">
+              <div style="position: relative" class="col-12 flex align-items-center">
+                <span class="block text-500 font-medium ml-2"> Your Tokens</span>
+                <!-- <img
+                  src="assets/images/tokens/{{ poolToken?.image }}_icon.svg"
+                  style="position: absolute; width: 40px; right: 20px"
+                /> -->
+              </div>
+              <!-- #region BALANCE REWARDTOKEN ////  -->
+              <div class="col-12 text-center">
+                <div class="flex justify-content-between flex-column mb-1">
+                  <div  style="    display: inline-flex;
+                  align-items: center;
+              "class="text-900 font-medium text-md">
+                
+                    <p style="width:150px;margin:unset;color:grey;">Locked:</p> 
+                    <span 
+                      *ngIf="poolToken?.tokenBalance"
+                      style="color: var(--yellow-500)"
+                    >
+                      ${{ poolToken?.tokenBalance! }}</span
+                    >
                   </div>
                 </div>
-
-                <!-- #endregion REALTIME ////  -->
-
-                <div class="col-12 flex justify-content-around">
-                  <button
-                    pButton
-                    pRipple
-                    style="width: fit-content"
-                    (click)="deposit()"
-                    type="button"
-                    label="Deposit"
-                    class="p-button-rounded mr-2 mb-2"
-                  ></button>
+      
+                <div class="flex justify-content-between flex-column mb-1">
+                  <div  style="    display: inline-flex;
+                  align-items: center;
+              "class="text-900 font-medium text-md">
+                
+                    <p style="width:150px;margin:unset;color:grey;">Loss:</p> 
+                    <span 
+                      *ngIf="poolToken?.tokenBalance"
+                      style="color: 'red'"
+                    >
+                      ${{ poolToken?.tokenBalance! }}</span
+                    >
+                  </div>
                 </div>
               </div>
+              <!-- #endregion BALANCE SUPER TOKE DEPOSIT ////  -->
+          
+        
+            </div>
             </div>
           </div>
 
