--- a/src/app/pages/request-credit/request-credit.component.scss
+++ b/src/app/pages/request-credit/request-credit.component.scss
@@ -7,3 +7,17 @@
     p-inputNumber  {margin-left:20px};
     p-dropdown {margin-left:20px;width:100%};
 }
+
+.aave {
+
+
+        align-items: center;
+    
+        width:100%;
+        h6 {margin:10px ;  color:grey;
+            span {
+                color:var(--primary-color)};
+            }
+     
+ 
+}
