--- a/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
+++ b/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
@@ -24,7 +24,7 @@
           <h5>
             Rate
          </h5>
-         <p   >{{credit.rate}}%</p>       </div>
+         <p   >{{+credit.rateAave + +credit.ratePool}}%</p>       </div>
         <div class="credit-details" >
           <h5>
             Installment
@@ -145,7 +145,7 @@
     </div>
   </div>
 
-    <div  *ngIf="display_step == 5 " style="height:420px" class="text-center card">
+    <div  *ngIf="display_step == 5 " style="" class="text-center card">
       <h5 style="margin: 20px auto 25px 5px" class="mb-1">
         <i (click)="doRefresh()" style="color: var(--primary-color); font-size: 30px;cursor:pointer;margin-right:10px" class="pi pi-refresh"></i>  Payment Plan <span style="color: var(--primary-color)"> Payment Plan </span> 
       </h5>
@@ -172,7 +172,35 @@
       </div>
  
 
-      <div  *ngIf="display_step == 9 " style="height:420px" class="text-center card">
+      
+      <div  *ngIf="display_step == 7 || display_step == 6 " style="height:420px" class="text-center card">
+        <h5 style="margin: 20px auto 5px" class="mb-1">
+        Credit <span style="color: var(--primary-color)">Cancel or Rejected </span> 
+        </h5>
+        </div>
+
+
+        <div  *ngIf="display_step == 8 " style="" class="text-center card">
+          <h5 style="margin: 20px auto 5px" class="mb-1">
+             Credit <span style="color: var(--primary-color)">Repayed!! </span> 
+          </h5>
+    
+          <div style="margin-top:20px">
+        
+  
+              <div   *ngFor="let installment of credit.installments">
+                <div class="flex justify-content-center align-items-center">
+              <span style="width:150px">  Installment #{{installment.nr}}</span> 
+              <span style="width:250px;">{{blockTimeToTime(+installment.timestamp)}} </span>
+       
+              <div 
+              style="margin: 10px 30px;height: 30px; width: 30px;border-radius: 20px;  background: green;"></div>
+              </div>
+              </div>
+          </div>
+          </div>
+
+      <div  *ngIf="display_step == 9 " style="" class="text-center card">
         <h5 style="margin: 20px auto 5px" class="mb-1">
           <i (click)="doRefresh()" style="color: var(--primary-color); font-size: 30px;cursor:pointer;margin-right:10px" class="pi pi-refresh"></i>  Credit <span style="color: var(--primary-color)">LIQUIDATED </span> 
         </h5>
@@ -184,7 +212,7 @@
                 <span style="width:250px;">{{blockTimeToTime(+credit.finishPhaseTimestamp)}} </span>
          
                 <div 
-                style="margin: 10px 30px;height: 30px; width: 30px;border-radius: 20px;  background: orange;"></div>
+                style="margin: 10px 30px;height: 30px; width: 30px;border-radius: 20px;  background: red;"></div>
                 </div>
             </div>
 
