--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -99,7 +99,7 @@
       <div style="text-align: center" class="col-6">
         <div style="border:unset;height:330px" class="card mb-0">
           <p style="font-size: 25px">
-            Featuring success the 1021
+            Featuring success the  {{ currentPool?.nrMembers }}
             <span style="color: var(--primary-color)">floowdies</span> and...
           </p>
           <div style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
