--- a/src/app/pages/start-flow/start-flow.component.html
+++ b/src/app/pages/start-flow/start-flow.component.html
@@ -29,7 +29,7 @@
               >
               </p-inputNumber>
               <p-dropdown
-                [options]="durations"
+                [options]="perDurations"
                 formControlName="flowRateTimeCtrl"
                 placeholder="Select Interval"
               >
